Revision history for Datify.

{{$NEXT}}

0.14.163  2014-06-12

 - Updated to use several Dist::Zilla features and plugins.
 - Improved documentation.
